--- a/Purchasing.Web/Views/Home/Landing.cshtml
+++ b/Purchasing.Web/Views/Home/Landing.cshtml
@@ -102,14 +102,14 @@
         <div id="recently-completed">
         <p><span class="time-ago">This month, you've had</span></p>
             <div class="scoreboard">
-            <p class="count"><a href="/Order">0</a>
-                <span class="label">Completed Orders</span></p>
+                <p class="count"><a href="@Url.Action("Index","Order")">0</a>
+                    <span class="label">Completed Orders</span></p>
             </div>
             <div class="scoreboard">
-            <p class="count"><a href="/Order">0</a>
+            <p class="count"><a href="@Url.Action("Index","Order")">0</a>
                 <span class="label">Denied Orders</span></p>
             </div>
-        <p class="review"><a href="/Order">Review your history &gt;</a></p>
+        <p class="review"><a href="@Url.Action("Index","Order")">Review your history &gt;</a></p>
         </div>
 
 
