added the orderhistory view and renamed PONumber field to ReferenceNumber

--- a/Purchasing.Web/Views/Home/_Orders.cshtml
+++ b/Purchasing.Web/Views/Home/_Orders.cshtml
@@ -56,7 +56,7 @@
         }
         else
         {
-            result.Append("<td>" + @Html.Encode(item.PoNumber) + "</td>");
+            result.Append("<td>" + @Html.Encode(item.ReferenceNumber) + "</td>");
         }
     }
 
