--- a/Purchasing.Web/Views/Order/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/Order/_OrdersTable.cshtml
@@ -52,7 +52,7 @@
         }
         else
         {
-            result.Append("<td>" + @Html.Encode(item.Order.PoNumber) + "</td>");
+            result.Append("<td>" + @Html.Encode(item.Order.ReferenceNumber) + "</td>");
         }
     }
 
