--- a/Purchasing.Web/Views/Home/_OrdersNoDataTable.cshtml
+++ b/Purchasing.Web/Views/Home/_OrdersNoDataTable.cshtml
@@ -57,7 +57,7 @@
         }
         else
         {
-            result.Append("<td>" + @Html.Encode(item.PoNumber) + "</td>");
+            result.Append("<td>" + @Html.Encode(item.ReferenceNumber) + "</td>");
         }
     }
 
